syntax = "proto3";

option java_multiple_files = true;

package raft;

service RaftServer {
    rpc AppendEntries (Entries) returns (AppendEntryResponse) {}
    rpc RequestVote (Vote) returns (VoteResponse) {}
}

message Entries {
    uint32 term = 1;
    uint32 leaderId = 2;
    uint32 prevLogIndex = 3;
    uint32 prevLogTerm = 4;
    uint32 leaderCommit = 5;
    repeated LogEntry entries = 6;
}

message LogEntry {
    uint32 term = 1;
    string command = 2;
}

message AppendEntryResponse {
    uint32 term = 1;
    bool success = 2;
}

message Vote {
    uint32 term = 1;
    uint32 candidateId = 2;
    uint32 lastLogIndex = 3;
    uint32 lastLogTerm = 4;
}

message VoteResponse {
    uint32 term = 1;
    bool voteGranted = 2;
}